@@ -17,11 +17,15 @@
 \RequirePackage{makeidx}
 \RequirePackage{framed}
 \RequirePackage{color}
+% For highlighted code.
 \RequirePackage{fancyvrb}
+% For table captions.
 \RequirePackage{threeparttable}
 % Handle footnotes in tables.
 \RequirePackage{footnote}
 \makesavenoteenv{tabulary}
+% For floating figures in the text.
+\RequirePackage{wrapfig}
 
 % Redefine these colors to your liking in the preamble.
 \definecolor{TitleColor}{rgb}{0.126,0.263,0.361}
